--- a/package.json
+++ b/package.json
@@ -17,13 +17,18 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "pretest:e2e": "yarn db:test:restart",
+    "test:e2e": "dotenv -e .env.test -- jest --watch --no-cache --config ./test/jest-e2e.json",
     "prisma:dev:deploy": "npx prisma migrate deploy",
+    "prisma:test:deploy": "dotenv -e .env.test -- npx prisma migrate deploy",
     "migration:dev:create": "npx prisma migrate dev --name",
     "db:dev:rm": "docker compose rm dev-db -s -f -v",
     "db:dev:up": "docker compose up dev-db -d",
     "db:dev:restart": "yarn db:dev:rm && yarn db:dev:up && sleep 1 && yarn prisma:dev:deploy",
-    "db:dev:seed": "ts-node -r tsconfig-paths/register src/seed.ts"
+    "db:dev:seed": "ts-node -r tsconfig-paths/register src/seed.ts",
+    "db:test:rm": "docker compose rm test-db -s -f -v",
+    "db:test:up": "docker compose up test-db -d",
+    "db:test:restart": "yarn db:test:rm && yarn db:test:up && sleep 1 && yarn prisma:test:deploy"
   },
   "dependencies": {
     "@nestjs/common": "^9.0.0",
@@ -31,7 +36,10 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "@prisma/client": "^4.14.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "csv-parse": "^5.3.10",
+    "dotenv-cli": "^7.2.1",
     "lodash": "^4.17.21",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0"
@@ -54,7 +62,7 @@
     "prettier": "^2.3.2",
     "prisma": "^4.14.1",
     "source-map-support": "^0.5.20",
-    "supertest": "^6.1.3",
+    "supertest": "^6.3.3",
     "ts-jest": "29.0.5",
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
