--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
   dev-db:
     image: postgres:13
     ports:
-      - 5438:5432
+      - ${DATABASE_PORT}:5432
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: 123
@@ -13,7 +13,7 @@ services:
   test-db:
     image: postgres:13
     ports:
-      - 5439:5432
+      - ${DATABASE_PORT}:5432
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: 123
