--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "test:e2e": "dotenv -e .env.test -- jest --watch --no-cache --config ./test/jest-e2e.json",
     "prisma:dev:deploy": "npx prisma migrate deploy",
     "prisma:test:deploy": "dotenv -e .env.test -- npx prisma migrate deploy",
+    "prisma:test:studio": "dotenv -e .env.test -- npx prisma studio",
     "migration:dev:create": "npx prisma migrate dev --name",
     "db:dev:rm": "docker compose rm dev-db -s -f -v",
     "db:dev:up": "docker compose up dev-db -d",
@@ -34,13 +35,18 @@
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.3.2",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/jwt": "^10.0.3",
+    "@nestjs/passport": "^9.0.3",
     "@nestjs/platform-express": "^9.0.0",
     "@prisma/client": "^4.14.1",
+    "@types/passport-local": "^1.0.35",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "csv-parse": "^5.3.10",
     "dotenv-cli": "^7.2.1",
     "lodash": "^4.17.21",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0"
   },
