add more environment variables for ease

--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,5 @@
-DATABASE_URL="postgresql://[USERNAME]:[PASSWORD]@localhost:5438/nest?schema=public"
+DATABASE_USER=postgres
+DATABASE_PASSWORD=password
+DATABASE_URL="postgresql://postgres:password@localhost:5438/nest?schema=public"
 DATABASE_PORT=5438
 JWT_SECRET=YOURSECRETHERE
